upgraded to ExtJS 5.0.1 to fix layout issue with row editor controls; added ExtJS CSS to project until we find a CDN with the CSS (VFW-49,VFW-39)

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -21,3 +21,11 @@ the bottom border of the fieldset.
 	border: 1px solid #C3C3C3;
 	background-image:-webkit-linear-gradient(top, #ffffff,#eeeeee);
 }
+
+.x-grid-item-alt {
+/* 	background-color: #F7F7C5; */
+	background: -webkit-linear-gradient(#FFFFFF,#F7F7C5); /* For Safari 5.1 to 6.0 */
+    background: -o-linear-gradient(#FFFFFF,#F7F7C5); /* For Opera 11.1 to 12.0 */
+    background: -moz-linear-gradient(#FFFFFF,#F7F7C5); /* For Firefox 3.6 to 15 */
+    background: linear-gradient(#FFFFFF,#F7F7C5); /* Standard syntax */
+}
